force-app/main/default/objects/bpats__Placement_Credit_Template__c/bpats__Placement_Credit_Template__c.object-meta.xml
<CustomObject>
    <label>Placement Credit Template</label>
    <nameField>
        <label>Placement Credit Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Credit Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>