force-app/main/default/objects/bpats__Placement_Credit_Template__c/fields/bpats__Active__c.field-meta.xml
<CustomField>
    <fullName>bpats__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>