force-app/main/default/objects/bpats__Placement_Credit_Template__c/fields/bpats__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>