force-app/main/default/objects/bpats__Placement_Credit_Template__c/fields/bpats__Placement__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>bpats__Placement__c</referenceTo>
    <relationshipLabel>Placement Credit Templates</relationshipLabel>
    <relationshipName>Placement_Credit_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>