force-app/main/default/objects/bpats__Placement_Credit_Template__c/fields/bpats__Priority__c.field-meta.xml
<CustomField>
    <fullName>bpats__Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>