force-app/main/default/objects/bpats__Placement_Credit_Template__c/fields/bpats__Status__c.field-meta.xml
<CustomField>
    <fullName>bpats__Status__c</fullName>
    <formula>IF(
 bpats__Void__c = true, 
  &apos;Void&apos;,
 IF(
  (bpats__Effective_Date__c &lt;= TODAY() &amp;&amp; (bpats__End_Date__c &gt;= TODAY() || ISBLANK(bpats__End_Date__c))),
   &apos;Active&apos;,
  IF(
   bpats__End_Date__c &lt; TODAY(),
    &apos;Expired&apos;,
    &apos;Upcoming&apos;
   )
  )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>