force-app/main/default/objects/bpats__Placement_Credit_Template__c/fields/bpats__Void__c.field-meta.xml
<CustomField>
    <fullName>bpats__Void__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Void</label>
    <type>Checkbox</type>
</CustomField>