force-app/main/default/objects/bpats__Placement_Credit_Template__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>